[package]
name = "dhbn254"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger"]
license = "The Unlicense"
readme = "README.md"
repository = "https://github.com/abigger87/rthaler/"
exclude = [
  "exdhbn254" # dhbn254 examples
]
description = """
Diffie-Hellman-Merkle Key Exchange Protocol Implemented Over BN254.
"""
keywords = ["elliptic", "curve", "bn254", "diffie", "hellman", "merkle", "key", "exchange"]

[dependencies]
tracing = "0.1.34"
actix = "0.13.0"
serde = "1.0.137"
ark_bn254 = "0.3.0"

[dev-dependencies]
proptest = "1.0.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
actors = []