[package]
name = "sumcheck"
version = "0.1.0"
authors = ["Andreas Bigger"]
license = "The Unlicense"
edition = "2021"
readme = "README.md"
description = """
Sum Check Protocol Implementation.
"""
keywords = ["zero", "knowledge", "zk", "snark", "cryptography", "web3"]


[dependencies]
utils = { path = "../utils" }
ndarray = "0.15.0"
rand = "0.8.5"
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"
tracing = "0.1.34"
actix = "0.13.0"
uuid = { version = "1.1.0", features = ["v4"] }

[dev-dependencies]
rstest = "0.12.0"
lazy_static = "1.4.0"